fix:solved the overflow issue on screen

--- a/style.css
+++ b/style.css
@@ -12,10 +12,11 @@ body
     background-color: #f2e8e1;
 }
 
+
 .card-container
 {
     background-color: white;
-    height: 80vh;
+    height: 90vh;
     width: 50vw;
     margin: 0 auto;
     margin-top: 10vh;
@@ -44,9 +45,10 @@ body
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 3rem;
+    padding: 1.5rem;
     text-align: left;
     min-height: 100%;
+    font-size: 14px;
 }
 
 #category-name
